// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  max-width: 117rem;
  background: #fff;
  margin: 0 auto;
}

.c2 {
  width: auto;
  height: 3rem;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #5e6062;
  padding: 1rem 0;
}

.c3:hover,
.c3:active,
.c3:focus {
  padding-bottom: 0.6rem;
  border-bottom: 0.4rem solid #63a524;
}

.c0 {
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media (max-width:64em) {
  .c1 {
    height: 3.6rem;
  }
}

@media (max-width:64em) {
  .c2 {
    height: 2rem;
  }
}

@media (max-width:64em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media (max-width:64em) {
  .c3 {
    padding: 0.7rem 0;
  }

  .c3:hover,
  .c3:active,
  .c3:focus {
    padding-bottom: 0.3rem;
  }
}

@media (max-width:64em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="c2"
          role="img"
          src="logo.svg"
        />
      </a>
      <a
        className="c3"
        href="https://accounts-dev.openstax.org/login"
      >
        Login
      </a>
    </div>
  </div>,
  .c0 {
  z-index: 2;
  top: 23rem;
  overflow: visible;
  position: fixed;
  right: 0;
}

@media (max-width:90em) {
  .c0 {
    position: -webkit-sticky;
    position: sticky;
    right: inital;
  }
}

<div
    className="c0"
  />,
  .c26 nav#toc ol {
  list-style-type: none;
}

.c26 nav#toc a {
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: none;
}

.c26 nav#toc a::after {
  margin-left: 1rem;
  content: target-counter(attr(href),page);
}

.c26 nav#toc > ol > li {
  margin-bottom: 12px;
  padding-left: 1rem;
}

.c26 nav#toc > ol > li:nth-child(2n) {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: #F4F4F4;
}

.c26 nav#toc > ol > li > a {
  font-size: 15px;
  font-weight: bold;
  color: #24739e;
  font-family: "Roboto Condensed",serif;
}

.c26 nav#toc > ol > li > a > .os-number {
  display: inline-block;
  color: #24739e;
  border: 1px solid #0EC0DC;
  padding: 0;
  margin-right: 1rem;
  font-weight: bold;
  width: 20px;
  height: 20px;
  line-height: 20px;
  text-align: center;
}

.c26 nav#toc > ol > li > a > .os-divider {
  display: none;
}

.c26 nav#toc > ol > li > ol {
  border-left: 4px solid #e7e7e7;
  margin-left: 20px;
  padding-left: 1rem;
  margin-top: 10px;
}

.c26 nav#toc > ol > li > ol > li > a {
  color: #324456;
  font-family: "Roboto Condensed",serif;
}

.c26 nav#toc > ol > li > ol > li > a > .os-number {
  font-weight: bold;
}

.c26 .preface {
  margin-bottom: 15px;
}

.c26 .preface h1 {
  font-family: "Roboto Condensed",serif;
  color: #24739e;
  font-size: 29px;
  margin-bottom: 15px;
  line-height: 44px;
  bookmark-level: 1;
  page-break-after: avoid;
}

.c26 .preface > section h2 {
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 19px;
  line-height: 29px;
  margin: 0;
  bookmark-level: 2;
  page-break-after: avoid;
}

.c26 .preface > section h3 {
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 19px;
  line-height: 29px;
  margin-bottom: 15px;
  page-break-after: avoid;
}

.c26 .preface > section h4 {
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
}

.c26 .preface > section h5 {
  font-family: "Roboto Condensed",serif;
  font-size: 12px;
  line-height: 18px;
  color: #000000;
  margin-bottom: 15px;
}

.c26 .preface p + section {
  margin-top: 15px;
}

.c26 .preface > div section {
  margin-bottom: 15px;
}

.c26 img {
  display: block;
  margin: auto;
  max-width: 6.5in;
  width: 100%;
}

.c26 .os-figure,
.c26 .preface .os-figure {
  display: block;
  margin: auto;
  max-width: 6.5in;
  width: 100%;
  margin-bottom: 19px;
}

.c26 .os-figure:last-child,
.c26 .preface .os-figure:last-child {
  margin-bottom: auto;
}

.c26 .os-figure > figure,
.c26 .preface .os-figure > figure {
  padding-bottom: 6px;
}

.c26 .os-figure > figure img,
.c26 .preface .os-figure > figure img {
  max-width: 6in;
}

.c26 .os-figure > .os-caption-container,
.c26 .preface .os-figure > .os-caption-container {
  font-family: "Roboto Condensed",serif;
  font-size: 10px;
  caption-side: bottom;
  display: inline;
  padding-bottom: 12px;
}

.c26 .os-figure > .os-caption-container .os-title-label,
.c26 .os-figure > .os-caption-container .os-number,
.c26 .os-figure > .os-caption-container .os-title,
.c26 .preface .os-figure > .os-caption-container .os-title-label,
.c26 .preface .os-figure > .os-caption-container .os-number,
.c26 .preface .os-figure > .os-caption-container .os-title {
  color: #000000;
  border: none;
  font-weight: 700;
}

.c26 .os-figure > .os-caption-container .os-number,
.c26 .preface .os-figure > .os-caption-container .os-number {
  margin-right: 6px;
}

.c26 .os-figure > .os-caption-container .os-caption,
.c26 .preface .os-figure > .os-caption-container .os-caption {
  color: rgba(0,0,0,0.6);
  text-align: left;
  page-break-before: avoid;
  line-height: 1.6em;
  margin-left: 5px;
}

.c26 [data-type="chapter"] {
  position: relative;
}

.c26 [data-type="chapter"] > .introduction {
  position: relative;
  padding-top: 3.2in;
}

.c26 [data-type="chapter"] > .introduction > [data-type="document-title"] {
  display: none;
}

.c26 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure figure {
  margin: 0;
  overflow: hidden;
  position: absolute;
  margin-bottom: -0.8in;
  max-width: none;
  width: 8.75in;
  height: 4in;
  -webkit-transform: translateX(-1.125in);
  -ms-transform: translateX(-1.125in);
  transform: translateX(-1.125in);
  top: -0.8in;
}

.c26 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure figure::after {
  width: 100%;
  content: " ";
  display: block;
  position: absolute;
  bottom: 0;
  height: 70px;
  background-color: #24739e;
  border-top: 4px solid #1b5574;
}

.c26 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure figure span[data-type="media"] {
  display: block;
  line-height: 0;
  width: 100%;
  height: 100%;
}

.c26 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure figure span[data-type="media"] img {
  width: 100%;
  position: relative;
  max-width: none;
  margin-top: 2in;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  padding-bottom: 70px;
}

.c26 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure .os-caption-container {
  width: 6.5in;
  margin-top: 8px;
}

.c26 [data-type="chapter"] > h1[data-type="document-title"] {
  font-size: 19px;
  position: absolute;
  color: #FFFFFF;
  white-space: nowrap;
  font-family: "Roboto Condensed",serif;
  z-index: 1;
  margin: 0;
  width: 6.5in;
  height: 4in;
  top: -0.8in;
}

.c26 [data-type="chapter"] > h1[data-type="document-title"] .os-text {
  position: absolute;
  bottom: 0;
  max-width: 6.5in;
  height: 60px;
  white-space: normal;
  font-weight: normal;
  left: 80px;
}

.c26 [data-type="chapter"] > h1[data-type="document-title"] .os-number {
  font-family: "Roboto Condensed",serif;
  bottom: 47.5px;
  background-color: #FFFFFF;
  width: 45px;
  height: 45px;
  display: block;
  line-height: 45px;
  color: #324456;
  position: absolute;
  border-radius: 50%;
  border: 1px solid #FFFFFF;
  text-align: center;
}

.c26 [data-type="chapter"] > h1[data-type="document-title"]::after {
  content: " ";
  display: block;
  width: 170px;
  height: 70px;
  position: absolute;
  bottom: 0;
  z-index: 3;
  left: -1in;
}

.c26 .appendix h1 {
  font: "Roboto Condensed",serif;
  font-size: 23px;
  color: #24739e;
  line-height: 35px;
  bookmark-level: 1;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 .appendix h1 span.os-number {
  border: solid 1px #24739e;
  color: #24739e;
  padding: 4px 8px;
  vertical-align: middle;
  position: relative;
  top: -2px;
  display: inline;
}

.c26 .appendix > section h2 {
  font: "Roboto Condensed",serif;
  font-size: 19px;
  color: #324456;
  line-height: 29px;
  bookmark-level: 2;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 .appendix > section h2:not(.labeled)::before {
  content: "" !important;
}

.c26 .appendix > section h3 {
  font: "Roboto Condensed",serif;
  font-size: 15px;
  color: #324456;
  line-height: 23px;
  bookmark-level: 3;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 .appendix > section h4 {
  font: "Roboto Condensed",serif;
  font-size: 12px;
  color: #324456;
  line-height: 18px;
  bookmark-level: 4;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 .appendix > section h5 {
  font: "Roboto Condensed",serif;
  font-size: 10px;
  color: #000000;
  line-height: 15px;
  bookmark-level: 5;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 .os-table {
  margin: 0 auto;
  padding: 0;
  border: none;
  page-break-inside: auto;
  display: table;
}

.c26 .os-table table {
  border-collapse: collapse;
  prince-caption-page: all;
  line-height: auto;
  margin-bottom: 10px;
}

.c26 .os-table thead {
  font-weight: 100;
}

.c26 .os-table thead tr:first-of-type th {
  background-color: #0EC0DC;
  color: #324456;
  font: 12px;
}

.c26 .os-table thead tr:not(first-child) {
  background-color: #24739e;
  color: #FFFFFF;
  border: 0;
}

.c26 .os-table thead th {
  padding: 10px;
}

.c26 .os-table thead tr:first-of-type th:first-child {
  border-top-left-radius: 3px;
}

.c26 .os-table thead tr:first-of-type th:last-child {
  border-top-right-radius: 3px;
}

.c26 .os-table tbody {
  border: solid 1px rgba(0,0,0,0.1);
}

.c26 .os-table tbody tr:last-child td {
  border-bottom: solid 1px rgba(0,0,0,0.1);
}

.c26 .os-table tbody tr td {
  padding: 10px;
  border-top: solid 1px rgba(0,0,0,0.1);
  border-right: solid 1px rgba(0,0,0,0.1);
  border-left: none;
}

.c26 .os-table tbody tr td:first-child {
  border-left: solid 1px rgba(0,0,0,0.1);
}

.c26 .os-table tbody tr:last-child td {
  border-right: solid 1px solid 1px;
}

.c26 .os-table tbody tr {
  page-break-inside: avoid;
}

.c26 .os-table tfoot {
  display: table-row-group;
}

.c26 .os-table > .os-caption-container {
  font-family: "Roboto Condensed",serif;
  font-size: 10px;
  caption-side: bottom;
  display: inline;
  padding-bottom: 12px;
  display: table-caption;
}

.c26 .os-table > .os-caption-container .os-title-label,
.c26 .os-table > .os-caption-container .os-number,
.c26 .os-table > .os-caption-container .os-title {
  color: #000000;
  border: none;
  font-weight: 700;
}

.c26 .os-table > .os-caption-container .os-number {
  margin-right: 6px;
}

.c26 .os-table > .os-caption-container .os-caption {
  color: rgba(0,0,0,0.6);
  text-align: left;
  page-break-before: avoid;
  line-height: 1.6em;
  margin-left: 5px;
}

.c26 .os-table .os-table-title {
  text-align: center;
  font-weight: bold;
  padding: 10px;
}

.c26 .os-table table.unstyled tbody tr {
  page-break-inside: avoid;
}

.c26 .os-table table.text-heavy thead {
  font-weight: 100;
}

.c26 .os-table table.text-heavy thead tr:first-of-type th {
  background-color: transparent;
  color: #242424;
  font: 12px;
}

.c26 .os-table table.text-heavy thead tr:not(first-child) {
  background-color: transparent;
  color: #242424;
  border: 0;
}

.c26 .os-table table.text-heavy thead th {
  padding: 10px;
}

.c26 .os-table table.text-heavy thead tr:first-of-type th:first-child {
  border-top-left-radius: 0;
}

.c26 .os-table table.text-heavy thead tr:first-of-type th:last-child {
  border-top-right-radius: 0;
}

.c26 .os-table table.text-heavy tbody {
  border: solid 1px rgba(0,0,0,0.1);
}

.c26 .os-table table.text-heavy tbody tr:last-child td {
  border-bottom: solid 1px rgba(0,0,0,0.1);
}

.c26 .os-table table.text-heavy tbody tr td {
  padding: 10px;
  border-top: solid 1px rgba(0,0,0,0.1);
  border-right: solid 1px rgba(0,0,0,0.1);
  border-left: none;
}

.c26 .os-table table.text-heavy tbody tr td:first-child {
  border-left: solid 1px rgba(0,0,0,0.1);
}

.c26 .os-table table.text-heavy tbody tr:last-child td {
  border-right: solid 1px solid 1px;
}

.c26 .os-table table.text-heavy tbody tr {
  page-break-inside: avoid;
}

.c26 .os-table table.text-heavy > .os-caption-container {
  font-family: "Roboto Condensed",serif;
  font-size: 10px;
  caption-side: bottom;
  display: inline;
  padding-bottom: 12px;
  display: table-caption;
}

.c26 .os-table table.text-heavy > .os-caption-container .os-title-label,
.c26 .os-table table.text-heavy > .os-caption-container .os-number,
.c26 .os-table table.text-heavy > .os-caption-container .os-title {
  color: #000000;
  border: none;
  font-weight: 700;
}

.c26 .os-table table.text-heavy > .os-caption-container .os-number {
  margin-right: 6px;
}

.c26 .os-table table.text-heavy > .os-caption-container .os-caption {
  color: rgba(0,0,0,0.6);
  text-align: left;
  page-break-before: avoid;
  line-height: 1.6em;
  margin-left: 5px;
}

.c26 table td.text-align-right {
  text-align: right;
}

.c26 table td.text-align-center {
  text-align: center;
}

.c26 table td.text-align-justify {
  text-align: justify;
}

.c26 table td img {
  height: auto;
  width: 100%;
  position: inherit;
}

.c26 div.note div.table table thead tr:first-of-type th {
  white-space: nowrap;
}

.c26 div.note div.table table thead tr:first-of-type th:not(:last-child) {
  text-align: left;
}

.c26 div.note div.table table thead tr:first-of-type th:last-child {
  text-align: right;
}

.c26 .os-eob.os-reference-container h2[data-type="document-title"] {
  font: "Roboto Condensed",serif;
  font-size: 15px;
  color: #324456;
  line-height: 23px;
  bookmark-level: 3;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 .os-eob.os-reference-container .os-reference-number {
  font-weight: bold;
  padding-right: 12px;
}

.c26 .os-eob h1[data-type="document-title"] {
  font: "Roboto Condensed",serif;
  font-size: 23px;
  color: #24739e;
  line-height: 35px;
  bookmark-level: 1;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 .os-eob h2[data-type="document-title"] {
  font: "Roboto Condensed",serif;
  font-size: 19px;
  color: #324456;
  line-height: 29px;
  bookmark-level: 2;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 .os-index-container {
  page-break-before: right;
  page-break-after: left;
  page-break-inside: auto;
  -webkit-column-count: 3;
  column-count: 3;
  -webkit-column-gap: 24px;
  column-gap: 24px;
  -webkit-column-width: auto;
  column-width: auto;
}

.c26 .os-index-container .group-by {
  padding-bottom: 12px;
}

.c26 .os-index-container .group-label {
  font-size: 15px;
  font-weight: bold;
  color: #324456;
}

.c26 .os-index-container .os-term-section-link {
  border-bottom: none;
}

.c26 .os-index-container .os-index-item {
  font-size: 10px;
  line-height: 1.5em;
}

.c26 .os-index-container .os-index-item .os-term {
  padding-right: 12px;
}

.c26 [data-type="footnote-refs"] {
  display: prince-footnote;
  color: #6D6F71;
  line-height: 1.5em;
  font-size: 12px;
}

.c26 [data-type="footnote-refs"] [data-type="footnote-refs-title"] {
  font: "Roboto Condensed",serif;
  font-size: 12px;
  color: #324456;
  line-height: 18px;
  bookmark-level: 4;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c26 [data-type="footnote-refs"] ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c26 [data-type="footnote-refs"]::footnote-call,
.c26 [data-type="footnote-refs"]::footnote-marker {
  content: none;
}

.c26 [data-type="note"].exploring-business-careers {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
  border-left: solid 1px #F2F2F2;
  border-right: solid 1px #F2F2F2;
  border-bottom: solid 1px #F2F2F2;
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c26 [data-type="note"].exploring-business-careers svg text {
  fill: #000000 !important;
}

.c26 [data-type="note"].exploring-business-careers a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c26 [data-type="note"].exploring-business-careers .os-note-body {
  color: #000000;
  border: solid 1px #F2F2F2;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].exploring-business-careers h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #000000;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  border-top: 3px solid #d34d32;
  border-bottom: solid 1px #F2F2F2;
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c26 [data-type="note"].exploring-business-careers .os-note-body {
  color: #000000;
  border: solid 1px #F2F2F2;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
  border: 0;
}

.c26 [data-type="note"].exploring-business-careers .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c26 [data-type="note"].exploring-business-careers .os-note-body p:last-child {
  padding-bottom: 0;
}

.c26 [data-type="note"].managing-change {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c26 [data-type="note"].managing-change svg text {
  fill: #000000 !important;
}

.c26 [data-type="note"].managing-change a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c26 [data-type="note"].managing-change .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].managing-change h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/managing-change.svg") #24739e no-repeat right;
  background-size: contain;
}

.c26 [data-type="note"].managing-change .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].managing-change .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c26 [data-type="note"].link-to-learning {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c26 [data-type="note"].link-to-learning svg text {
  fill: #000000 !important;
}

.c26 [data-type="note"].link-to-learning a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c26 [data-type="note"].link-to-learning .os-note-body {
  background: #F2F2F2;
  color: #000000;
  border: solid 1px #F2F2F2;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].link-to-learning h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #0EC0DC;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/link-to-learning.svg") #0EC0DC no-repeat right;
  background-size: contain;
}

.c26 [data-type="note"].link-to-learning .os-note-body {
  background: #F2F2F2;
  color: #000000;
  border: solid 1px #F2F2F2;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].link-to-learning .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c26 [data-type="note"].catching-spirit {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c26 [data-type="note"].catching-spirit svg text {
  fill: #000000 !important;
}

.c26 [data-type="note"].catching-spirit a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c26 [data-type="note"].catching-spirit .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].catching-spirit h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/catching-spirit.svg") #24739e no-repeat right;
  background-size: contain;
}

.c26 [data-type="note"].catching-spirit .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].catching-spirit .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c26 [data-type="note"].concept-check {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c26 [data-type="note"].concept-check svg text {
  fill: #000000 !important;
}

.c26 [data-type="note"].concept-check a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c26 [data-type="note"].concept-check .os-note-body {
  background: #D6D9DD;
  color: #000000;
  border: solid 1px #D6D9DD;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].concept-check h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #324456;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/concept-check.svg") #324456 no-repeat right;
  background-size: contain;
}

.c26 [data-type="note"].concept-check .os-note-body {
  background: #D6D9DD;
  color: #000000;
  border: solid 1px #D6D9DD;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].concept-check .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c26 [data-type="note"].expanding-around-globe {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c26 [data-type="note"].expanding-around-globe svg text {
  fill: #000000 !important;
}

.c26 [data-type="note"].expanding-around-globe a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c26 [data-type="note"].expanding-around-globe .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].expanding-around-globe h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/expanding-around-globe.svg") #24739e no-repeat right;
  background-size: contain;
}

.c26 [data-type="note"].expanding-around-globe .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].expanding-around-globe .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c26 [data-type="note"].ethics-in-practice {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c26 [data-type="note"].ethics-in-practice svg text {
  fill: #000000 !important;
}

.c26 [data-type="note"].ethics-in-practice a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c26 [data-type="note"].ethics-in-practice .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].ethics-in-practice h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/ethics-in-practice.svg") #24739e no-repeat right;
  background-size: contain;
}

.c26 [data-type="note"].ethics-in-practice .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].ethics-in-practice .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c26 [data-type="note"].customer-satisfaction {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c26 [data-type="note"].customer-satisfaction svg text {
  fill: #000000 !important;
}

.c26 [data-type="note"].customer-satisfaction a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c26 [data-type="note"].customer-satisfaction .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].customer-satisfaction h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/customer-satisfaction.svg") #24739e no-repeat right;
  background-size: contain;
}

.c26 [data-type="note"].customer-satisfaction .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c26 [data-type="note"].customer-satisfaction .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c25 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 60.2rem;
  margin: 0 auto;
  padding: 0 1.6rem;
  padding-top: 1.6rem;
  padding-bottom: 0;
  overflow: visible;
}

.c25 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c25 a:hover {
  color: #0064A0;
}

.c25 * {
  overflow: initial;
}

.c29 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 60.2rem;
  margin: 0 auto;
  padding: 0 1.6rem;
  color: #027EB5;
}

.c29 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c29 a:hover {
  color: #0064A0;
}

.c29 > span {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c29 > span a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c29 > span a:hover {
  color: #0064A0;
}

.c29 > span:hover {
  color: #0064A0;
}

.c30 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 60.2rem;
  margin: 0 auto;
  padding: 0 1.6rem;
}

.c30 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c30 a:hover {
  color: #0064A0;
}

.c27 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  box-shadow: 0 0 0.2rem 0.2rem rgba(0,0,0,0.1);
  margin: 2rem 0 0 0;
  min-height: 6rem;
  padding: 1.8rem 0 0 0;
}

.c27 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c27 a:hover {
  color: #0064A0;
}

.c27 > .c28 {
  margin-bottom: 1.8rem;
}

.c27 li {
  margin-bottom: 1rem;
  overflow: visible;
}

.c5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c11 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c4 {
  height: 2rem;
  width: 2rem;
  color: #fff;
  margin-right: 0.7rem;
}

.c2 {
  width: 100%;
  max-width: 117rem;
  margin: 0 auto;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  max-width: 87rem;
  padding: 0;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-weight: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 2.4rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1.5rem 0 1rem 0;
  margin: 0;
  max-width: 87rem;
  padding: 0;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-weight: bold;
  display: block;
  margin: 1rem 0 0 0;
}

.c1 {
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 13rem;
  background: linear-gradient(to right,#002468,#003DB1);
}

.c24 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.c21 {
  top: 23rem;
  height: calc(100vh - 23rem);
  overflow-y: auto;
  padding: 1rem;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #f1f1f1;
  width: 33.5rem;
  position: -webkit-sticky;
  position: sticky;
}

.c21 ol {
  padding-inline-start: 10px;
}

.c21 > * {
  -webkit-transition: all 300ms;
  transition: all 300ms;
  visibility: visible;
  opacity: 1;
}

.c22 {
  list-style: none;
  font-size: 1.4rem;
}

.c23 {
  list-style: none;
  font-size: 1.4rem;
  overflow: visible;
  position: relative;
}

.c23:before {
  font-weight: bold;
  content: '>';
  position: absolute;
  right: 100%;
}

.c15 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c18 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c10 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c12 {
  font-family: Neue Helvetica W01;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #5E6062;
  margin: 0;
  padding: 0;
}

.c9 {
  border: none;
  padding: 0;
  margin: 0;
  overflow: visible;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4rem;
  border-bottom: solid 0.1rem #5E6062;
}

.c16 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  height: 2.5rem;
  border: none;
  outline: none;
}

.c16::-webkit-input-placeholder {
  color: #5E6062;
}

.c16::-moz-placeholder {
  color: #5E6062;
}

.c16:-ms-input-placeholder {
  color: #5E6062;
}

.c16::placeholder {
  color: #5E6062;
}

.c17 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #5E6062;
  margin: 0;
}

.c13 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: 100%;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
  position: relative;
  z-index: 2;
  display: block;
  background: #fff;
}

.c20 {
  overflow: visible;
  min-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0 auto;
  width: 100%;
  max-width: 117rem;
  background-color: #fff;
}

.c0 {
  overflow: visible;
  background-color: #f1f1f1;
  width: 100%;
  min-height: 100%;
}

@media (max-width:64em) {
  .c27 {
    min-height: 4rem;
    padding: 0.8rem 0 0 0;
  }

  .c27 > .c28 {
    margin-bottom: 0.8rem;
  }
}

@media (max-width:64em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media (max-width:64em) {
  .c6 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media (max-width:64em) {
  .c6 {
    white-space: normal;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    max-height: 4rem;
    margin-top: 0.3rem;
  }
}

@media (max-width:64em) {
  .c1 {
    padding: 1.6rem;
    height: 10.4rem;
  }
}

@media (max-width:64em) {
  .c21 {
    position: -webkit-sticky;
    position: sticky;
  }
}

@media (max-width:64em) {
  .c8 {
    height: 4rem;
  }
}

@media (max-width:64em) {
  .c14 {
    border: none;
    margin-right: 1rem;
  }
}

@media (max-width:64em) {
  .c16 {
    display: none;
  }
}

@media (max-width:64em) {
  .c19 {
    display: none;
  }
}

@media (max-width:64em) {
  .c7 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <a
          className="c3"
          href="/details/books/book-slug-1"
        >
          <svg
            aria-hidden="true"
            className="c4 c5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            />
          </svg>
          Test Book 1
        </a>
        <h1
          className="c6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<span class=\\"os-text\\">Test Page 4</span>",
            }
          }
        />
      </div>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <button
          aria-label="Click to close the Table of Contents"
          className="c9"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c10 c11"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <h3
            className="c12"
          >
            Table of contents
          </h3>
        </button>
        <div
          className="c13"
        >
          <div
            className="c14"
          >
            <svg
              aria-hidden="true"
              className="c15 c11"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                fill="currentColor"
              />
            </svg>
            <input
              className="c16"
              placeholder="Search this book"
            />
          </div>
          <div
            className="c17"
          >
            <svg
              aria-hidden="true"
              className="c18 c11"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
                fill="currentColor"
              />
            </svg>
            <h3
              className="c19"
            >
              Print options
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c20"
    >
      <div
        className="c21"
      >
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="c22"
              >
                <a
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 1</span>",
                    }
                  }
                  href="test-page-1"
                  onClick={[Function]}
                />
              </li>
              <li
                className="c22"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c22"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 2</span>",
                          }
                        }
                        href="1-test-page-2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c22"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c22"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 3</span>",
                          }
                        }
                        href="1-test-page-3"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c22"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      aria-label="Current Page"
                      className="c23"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
                          }
                        }
                        href="1-test-page-4"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c22"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c22"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 5</span>",
                          }
                        }
                        href="1-test-page-5"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c22"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c22"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 6</span>",
                          }
                        }
                        href="1-test-page-6"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c22"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c22"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                          }
                        }
                        href="1-test-page-7"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
      <div
        className="c24"
        id="main-content"
        tabIndex={-1}
      >
        <div
          className="c25 c26"
        >
          <div
            data-type="chapter"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<div xmlns:m=\\"http://www.w3.org/1998/Math/MathML\\" xmlns:ns2=\\"urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0\\" class=\\"introduction\\" data-cnxml-to-html-ver=\\"1.3.2\\" data-type=\\"page\\" id=\\"1d1fd537-77fb-4eac-8a8a-60bbaa747b6d\\">this is a test page</div>",
                }
              }
              data-type="page"
            />
          </div>
        </div>
        <details
          className="c27"
        >
          <summary
            className="c28 c29"
          >
            <span>
              Citation/Attribution
            </span>
          </summary>
          <div
            className="c30"
            dangerouslySetInnerHTML={
              Object {
                "__html": "
<p>
  Want to cite, share, or modify this book? This book is Sweet License
  1.0 and you must attribute OpenStax.
</p>

<strong>Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a print format,
    then you must include on every physical page the following attribution:
    <blockquote>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-test-page-2
    </blockquote>
  </li>
  <li>
    If you are redistributing all or part of this book in a digital format,
    then you must include on every digital page view the following attribution:
    <blockquote>
      Access for free at <a href=\\"https://openstax.org/books/book-slug-1/pages/1-test-page-2\\">https://openstax.org/books/book-slug-1/pages/1-test-page-2</a>
    </blockquote>
  </li>
</ul>

<strong>Citation information</strong>
<ul>
  <li>
    Use the information below to generate a citation. We recommend using a
    citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/1-test-page-2\\">https://openstax.org/books/book-slug-1/pages/1-test-page-2</a>
      </li>
      <li>
        Section URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/doesnotmatter\\">https://openstax.org/books/book-slug-1/pages/doesnotmatter</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 OpenStax. Textbook content produced by OpenStax is licensed under a
  Sweet License 1.0 license. <strong>The OpenStax logo, OpenStax book
  covers, and OpenStax CNX logo are not subject to the Creative Commons license and may
  not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
              }
            }
          />
        </details>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  max-width: 117rem;
  background: #fff;
  margin: 0 auto;
}

.c2 {
  width: auto;
  height: 3rem;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #5e6062;
  padding: 1rem 0;
}

.c3:hover,
.c3:active,
.c3:focus {
  padding-bottom: 0.6rem;
  border-bottom: 0.4rem solid #63a524;
}

.c0 {
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media (max-width:64em) {
  .c1 {
    height: 3.6rem;
  }
}

@media (max-width:64em) {
  .c2 {
    height: 2rem;
  }
}

@media (max-width:64em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media (max-width:64em) {
  .c3 {
    padding: 0.7rem 0;
  }

  .c3:hover,
  .c3:active,
  .c3:focus {
    padding-bottom: 0.3rem;
  }
}

@media (max-width:64em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="c2"
          role="img"
          src="logo.svg"
        />
      </a>
      <a
        className="c3"
        href="https://accounts-dev.openstax.org/login"
      >
        Login
      </a>
    </div>
  </div>,
  .c0 {
  z-index: 2;
  top: 23rem;
  overflow: visible;
  position: fixed;
  right: 0;
}

@media (max-width:90em) {
  .c0 {
    position: -webkit-sticky;
    position: sticky;
    right: inital;
  }
}

<div
    className="c0"
  />,
  .c18 nav#toc ol {
  list-style-type: none;
}

.c18 nav#toc a {
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: none;
}

.c18 nav#toc a::after {
  margin-left: 1rem;
  content: target-counter(attr(href),page);
}

.c18 nav#toc > ol > li {
  margin-bottom: 12px;
  padding-left: 1rem;
}

.c18 nav#toc > ol > li:nth-child(2n) {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: #F4F4F4;
}

.c18 nav#toc > ol > li > a {
  font-size: 15px;
  font-weight: bold;
  color: #24739e;
  font-family: "Roboto Condensed",serif;
}

.c18 nav#toc > ol > li > a > .os-number {
  display: inline-block;
  color: #24739e;
  border: 1px solid #0EC0DC;
  padding: 0;
  margin-right: 1rem;
  font-weight: bold;
  width: 20px;
  height: 20px;
  line-height: 20px;
  text-align: center;
}

.c18 nav#toc > ol > li > a > .os-divider {
  display: none;
}

.c18 nav#toc > ol > li > ol {
  border-left: 4px solid #e7e7e7;
  margin-left: 20px;
  padding-left: 1rem;
  margin-top: 10px;
}

.c18 nav#toc > ol > li > ol > li > a {
  color: #324456;
  font-family: "Roboto Condensed",serif;
}

.c18 nav#toc > ol > li > ol > li > a > .os-number {
  font-weight: bold;
}

.c18 .preface {
  margin-bottom: 15px;
}

.c18 .preface h1 {
  font-family: "Roboto Condensed",serif;
  color: #24739e;
  font-size: 29px;
  margin-bottom: 15px;
  line-height: 44px;
  bookmark-level: 1;
  page-break-after: avoid;
}

.c18 .preface > section h2 {
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 19px;
  line-height: 29px;
  margin: 0;
  bookmark-level: 2;
  page-break-after: avoid;
}

.c18 .preface > section h3 {
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 19px;
  line-height: 29px;
  margin-bottom: 15px;
  page-break-after: avoid;
}

.c18 .preface > section h4 {
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
}

.c18 .preface > section h5 {
  font-family: "Roboto Condensed",serif;
  font-size: 12px;
  line-height: 18px;
  color: #000000;
  margin-bottom: 15px;
}

.c18 .preface p + section {
  margin-top: 15px;
}

.c18 .preface > div section {
  margin-bottom: 15px;
}

.c18 img {
  display: block;
  margin: auto;
  max-width: 6.5in;
  width: 100%;
}

.c18 .os-figure,
.c18 .preface .os-figure {
  display: block;
  margin: auto;
  max-width: 6.5in;
  width: 100%;
  margin-bottom: 19px;
}

.c18 .os-figure:last-child,
.c18 .preface .os-figure:last-child {
  margin-bottom: auto;
}

.c18 .os-figure > figure,
.c18 .preface .os-figure > figure {
  padding-bottom: 6px;
}

.c18 .os-figure > figure img,
.c18 .preface .os-figure > figure img {
  max-width: 6in;
}

.c18 .os-figure > .os-caption-container,
.c18 .preface .os-figure > .os-caption-container {
  font-family: "Roboto Condensed",serif;
  font-size: 10px;
  caption-side: bottom;
  display: inline;
  padding-bottom: 12px;
}

.c18 .os-figure > .os-caption-container .os-title-label,
.c18 .os-figure > .os-caption-container .os-number,
.c18 .os-figure > .os-caption-container .os-title,
.c18 .preface .os-figure > .os-caption-container .os-title-label,
.c18 .preface .os-figure > .os-caption-container .os-number,
.c18 .preface .os-figure > .os-caption-container .os-title {
  color: #000000;
  border: none;
  font-weight: 700;
}

.c18 .os-figure > .os-caption-container .os-number,
.c18 .preface .os-figure > .os-caption-container .os-number {
  margin-right: 6px;
}

.c18 .os-figure > .os-caption-container .os-caption,
.c18 .preface .os-figure > .os-caption-container .os-caption {
  color: rgba(0,0,0,0.6);
  text-align: left;
  page-break-before: avoid;
  line-height: 1.6em;
  margin-left: 5px;
}

.c18 [data-type="chapter"] {
  position: relative;
}

.c18 [data-type="chapter"] > .introduction {
  position: relative;
  padding-top: 3.2in;
}

.c18 [data-type="chapter"] > .introduction > [data-type="document-title"] {
  display: none;
}

.c18 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure figure {
  margin: 0;
  overflow: hidden;
  position: absolute;
  margin-bottom: -0.8in;
  max-width: none;
  width: 8.75in;
  height: 4in;
  -webkit-transform: translateX(-1.125in);
  -ms-transform: translateX(-1.125in);
  transform: translateX(-1.125in);
  top: -0.8in;
}

.c18 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure figure::after {
  width: 100%;
  content: " ";
  display: block;
  position: absolute;
  bottom: 0;
  height: 70px;
  background-color: #24739e;
  border-top: 4px solid #1b5574;
}

.c18 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure figure span[data-type="media"] {
  display: block;
  line-height: 0;
  width: 100%;
  height: 100%;
}

.c18 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure figure span[data-type="media"] img {
  width: 100%;
  position: relative;
  max-width: none;
  margin-top: 2in;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  padding-bottom: 70px;
}

.c18 [data-type="chapter"] > .introduction > [data-type="document-title"] + .os-figure .os-caption-container {
  width: 6.5in;
  margin-top: 8px;
}

.c18 [data-type="chapter"] > h1[data-type="document-title"] {
  font-size: 19px;
  position: absolute;
  color: #FFFFFF;
  white-space: nowrap;
  font-family: "Roboto Condensed",serif;
  z-index: 1;
  margin: 0;
  width: 6.5in;
  height: 4in;
  top: -0.8in;
}

.c18 [data-type="chapter"] > h1[data-type="document-title"] .os-text {
  position: absolute;
  bottom: 0;
  max-width: 6.5in;
  height: 60px;
  white-space: normal;
  font-weight: normal;
  left: 80px;
}

.c18 [data-type="chapter"] > h1[data-type="document-title"] .os-number {
  font-family: "Roboto Condensed",serif;
  bottom: 47.5px;
  background-color: #FFFFFF;
  width: 45px;
  height: 45px;
  display: block;
  line-height: 45px;
  color: #324456;
  position: absolute;
  border-radius: 50%;
  border: 1px solid #FFFFFF;
  text-align: center;
}

.c18 [data-type="chapter"] > h1[data-type="document-title"]::after {
  content: " ";
  display: block;
  width: 170px;
  height: 70px;
  position: absolute;
  bottom: 0;
  z-index: 3;
  left: -1in;
}

.c18 .appendix h1 {
  font: "Roboto Condensed",serif;
  font-size: 23px;
  color: #24739e;
  line-height: 35px;
  bookmark-level: 1;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 .appendix h1 span.os-number {
  border: solid 1px #24739e;
  color: #24739e;
  padding: 4px 8px;
  vertical-align: middle;
  position: relative;
  top: -2px;
  display: inline;
}

.c18 .appendix > section h2 {
  font: "Roboto Condensed",serif;
  font-size: 19px;
  color: #324456;
  line-height: 29px;
  bookmark-level: 2;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 .appendix > section h2:not(.labeled)::before {
  content: "" !important;
}

.c18 .appendix > section h3 {
  font: "Roboto Condensed",serif;
  font-size: 15px;
  color: #324456;
  line-height: 23px;
  bookmark-level: 3;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 .appendix > section h4 {
  font: "Roboto Condensed",serif;
  font-size: 12px;
  color: #324456;
  line-height: 18px;
  bookmark-level: 4;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 .appendix > section h5 {
  font: "Roboto Condensed",serif;
  font-size: 10px;
  color: #000000;
  line-height: 15px;
  bookmark-level: 5;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 .os-table {
  margin: 0 auto;
  padding: 0;
  border: none;
  page-break-inside: auto;
  display: table;
}

.c18 .os-table table {
  border-collapse: collapse;
  prince-caption-page: all;
  line-height: auto;
  margin-bottom: 10px;
}

.c18 .os-table thead {
  font-weight: 100;
}

.c18 .os-table thead tr:first-of-type th {
  background-color: #0EC0DC;
  color: #324456;
  font: 12px;
}

.c18 .os-table thead tr:not(first-child) {
  background-color: #24739e;
  color: #FFFFFF;
  border: 0;
}

.c18 .os-table thead th {
  padding: 10px;
}

.c18 .os-table thead tr:first-of-type th:first-child {
  border-top-left-radius: 3px;
}

.c18 .os-table thead tr:first-of-type th:last-child {
  border-top-right-radius: 3px;
}

.c18 .os-table tbody {
  border: solid 1px rgba(0,0,0,0.1);
}

.c18 .os-table tbody tr:last-child td {
  border-bottom: solid 1px rgba(0,0,0,0.1);
}

.c18 .os-table tbody tr td {
  padding: 10px;
  border-top: solid 1px rgba(0,0,0,0.1);
  border-right: solid 1px rgba(0,0,0,0.1);
  border-left: none;
}

.c18 .os-table tbody tr td:first-child {
  border-left: solid 1px rgba(0,0,0,0.1);
}

.c18 .os-table tbody tr:last-child td {
  border-right: solid 1px solid 1px;
}

.c18 .os-table tbody tr {
  page-break-inside: avoid;
}

.c18 .os-table tfoot {
  display: table-row-group;
}

.c18 .os-table > .os-caption-container {
  font-family: "Roboto Condensed",serif;
  font-size: 10px;
  caption-side: bottom;
  display: inline;
  padding-bottom: 12px;
  display: table-caption;
}

.c18 .os-table > .os-caption-container .os-title-label,
.c18 .os-table > .os-caption-container .os-number,
.c18 .os-table > .os-caption-container .os-title {
  color: #000000;
  border: none;
  font-weight: 700;
}

.c18 .os-table > .os-caption-container .os-number {
  margin-right: 6px;
}

.c18 .os-table > .os-caption-container .os-caption {
  color: rgba(0,0,0,0.6);
  text-align: left;
  page-break-before: avoid;
  line-height: 1.6em;
  margin-left: 5px;
}

.c18 .os-table .os-table-title {
  text-align: center;
  font-weight: bold;
  padding: 10px;
}

.c18 .os-table table.unstyled tbody tr {
  page-break-inside: avoid;
}

.c18 .os-table table.text-heavy thead {
  font-weight: 100;
}

.c18 .os-table table.text-heavy thead tr:first-of-type th {
  background-color: transparent;
  color: #242424;
  font: 12px;
}

.c18 .os-table table.text-heavy thead tr:not(first-child) {
  background-color: transparent;
  color: #242424;
  border: 0;
}

.c18 .os-table table.text-heavy thead th {
  padding: 10px;
}

.c18 .os-table table.text-heavy thead tr:first-of-type th:first-child {
  border-top-left-radius: 0;
}

.c18 .os-table table.text-heavy thead tr:first-of-type th:last-child {
  border-top-right-radius: 0;
}

.c18 .os-table table.text-heavy tbody {
  border: solid 1px rgba(0,0,0,0.1);
}

.c18 .os-table table.text-heavy tbody tr:last-child td {
  border-bottom: solid 1px rgba(0,0,0,0.1);
}

.c18 .os-table table.text-heavy tbody tr td {
  padding: 10px;
  border-top: solid 1px rgba(0,0,0,0.1);
  border-right: solid 1px rgba(0,0,0,0.1);
  border-left: none;
}

.c18 .os-table table.text-heavy tbody tr td:first-child {
  border-left: solid 1px rgba(0,0,0,0.1);
}

.c18 .os-table table.text-heavy tbody tr:last-child td {
  border-right: solid 1px solid 1px;
}

.c18 .os-table table.text-heavy tbody tr {
  page-break-inside: avoid;
}

.c18 .os-table table.text-heavy > .os-caption-container {
  font-family: "Roboto Condensed",serif;
  font-size: 10px;
  caption-side: bottom;
  display: inline;
  padding-bottom: 12px;
  display: table-caption;
}

.c18 .os-table table.text-heavy > .os-caption-container .os-title-label,
.c18 .os-table table.text-heavy > .os-caption-container .os-number,
.c18 .os-table table.text-heavy > .os-caption-container .os-title {
  color: #000000;
  border: none;
  font-weight: 700;
}

.c18 .os-table table.text-heavy > .os-caption-container .os-number {
  margin-right: 6px;
}

.c18 .os-table table.text-heavy > .os-caption-container .os-caption {
  color: rgba(0,0,0,0.6);
  text-align: left;
  page-break-before: avoid;
  line-height: 1.6em;
  margin-left: 5px;
}

.c18 table td.text-align-right {
  text-align: right;
}

.c18 table td.text-align-center {
  text-align: center;
}

.c18 table td.text-align-justify {
  text-align: justify;
}

.c18 table td img {
  height: auto;
  width: 100%;
  position: inherit;
}

.c18 div.note div.table table thead tr:first-of-type th {
  white-space: nowrap;
}

.c18 div.note div.table table thead tr:first-of-type th:not(:last-child) {
  text-align: left;
}

.c18 div.note div.table table thead tr:first-of-type th:last-child {
  text-align: right;
}

.c18 .os-eob.os-reference-container h2[data-type="document-title"] {
  font: "Roboto Condensed",serif;
  font-size: 15px;
  color: #324456;
  line-height: 23px;
  bookmark-level: 3;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 .os-eob.os-reference-container .os-reference-number {
  font-weight: bold;
  padding-right: 12px;
}

.c18 .os-eob h1[data-type="document-title"] {
  font: "Roboto Condensed",serif;
  font-size: 23px;
  color: #24739e;
  line-height: 35px;
  bookmark-level: 1;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 .os-eob h2[data-type="document-title"] {
  font: "Roboto Condensed",serif;
  font-size: 19px;
  color: #324456;
  line-height: 29px;
  bookmark-level: 2;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 .os-index-container {
  page-break-before: right;
  page-break-after: left;
  page-break-inside: auto;
  -webkit-column-count: 3;
  column-count: 3;
  -webkit-column-gap: 24px;
  column-gap: 24px;
  -webkit-column-width: auto;
  column-width: auto;
}

.c18 .os-index-container .group-by {
  padding-bottom: 12px;
}

.c18 .os-index-container .group-label {
  font-size: 15px;
  font-weight: bold;
  color: #324456;
}

.c18 .os-index-container .os-term-section-link {
  border-bottom: none;
}

.c18 .os-index-container .os-index-item {
  font-size: 10px;
  line-height: 1.5em;
}

.c18 .os-index-container .os-index-item .os-term {
  padding-right: 12px;
}

.c18 [data-type="footnote-refs"] {
  display: prince-footnote;
  color: #6D6F71;
  line-height: 1.5em;
  font-size: 12px;
}

.c18 [data-type="footnote-refs"] [data-type="footnote-refs-title"] {
  font: "Roboto Condensed",serif;
  font-size: 12px;
  color: #324456;
  line-height: 18px;
  bookmark-level: 4;
  page-break-after: avoid;
  margin: 0;
  padding: 0;
}

.c18 [data-type="footnote-refs"] ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c18 [data-type="footnote-refs"]::footnote-call,
.c18 [data-type="footnote-refs"]::footnote-marker {
  content: none;
}

.c18 [data-type="note"].exploring-business-careers {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
  border-left: solid 1px #F2F2F2;
  border-right: solid 1px #F2F2F2;
  border-bottom: solid 1px #F2F2F2;
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c18 [data-type="note"].exploring-business-careers svg text {
  fill: #000000 !important;
}

.c18 [data-type="note"].exploring-business-careers a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c18 [data-type="note"].exploring-business-careers .os-note-body {
  color: #000000;
  border: solid 1px #F2F2F2;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].exploring-business-careers h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #000000;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  border-top: 3px solid #d34d32;
  border-bottom: solid 1px #F2F2F2;
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c18 [data-type="note"].exploring-business-careers .os-note-body {
  color: #000000;
  border: solid 1px #F2F2F2;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
  border: 0;
}

.c18 [data-type="note"].exploring-business-careers .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c18 [data-type="note"].exploring-business-careers .os-note-body p:last-child {
  padding-bottom: 0;
}

.c18 [data-type="note"].managing-change {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c18 [data-type="note"].managing-change svg text {
  fill: #000000 !important;
}

.c18 [data-type="note"].managing-change a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c18 [data-type="note"].managing-change .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].managing-change h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/managing-change.svg") #24739e no-repeat right;
  background-size: contain;
}

.c18 [data-type="note"].managing-change .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].managing-change .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c18 [data-type="note"].link-to-learning {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c18 [data-type="note"].link-to-learning svg text {
  fill: #000000 !important;
}

.c18 [data-type="note"].link-to-learning a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c18 [data-type="note"].link-to-learning .os-note-body {
  background: #F2F2F2;
  color: #000000;
  border: solid 1px #F2F2F2;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].link-to-learning h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #0EC0DC;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/link-to-learning.svg") #0EC0DC no-repeat right;
  background-size: contain;
}

.c18 [data-type="note"].link-to-learning .os-note-body {
  background: #F2F2F2;
  color: #000000;
  border: solid 1px #F2F2F2;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].link-to-learning .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c18 [data-type="note"].catching-spirit {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c18 [data-type="note"].catching-spirit svg text {
  fill: #000000 !important;
}

.c18 [data-type="note"].catching-spirit a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c18 [data-type="note"].catching-spirit .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].catching-spirit h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/catching-spirit.svg") #24739e no-repeat right;
  background-size: contain;
}

.c18 [data-type="note"].catching-spirit .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].catching-spirit .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c18 [data-type="note"].concept-check {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c18 [data-type="note"].concept-check svg text {
  fill: #000000 !important;
}

.c18 [data-type="note"].concept-check a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c18 [data-type="note"].concept-check .os-note-body {
  background: #D6D9DD;
  color: #000000;
  border: solid 1px #D6D9DD;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].concept-check h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #324456;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/concept-check.svg") #324456 no-repeat right;
  background-size: contain;
}

.c18 [data-type="note"].concept-check .os-note-body {
  background: #D6D9DD;
  color: #000000;
  border: solid 1px #D6D9DD;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].concept-check .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c18 [data-type="note"].expanding-around-globe {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c18 [data-type="note"].expanding-around-globe svg text {
  fill: #000000 !important;
}

.c18 [data-type="note"].expanding-around-globe a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c18 [data-type="note"].expanding-around-globe .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].expanding-around-globe h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/expanding-around-globe.svg") #24739e no-repeat right;
  background-size: contain;
}

.c18 [data-type="note"].expanding-around-globe .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].expanding-around-globe .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c18 [data-type="note"].ethics-in-practice {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c18 [data-type="note"].ethics-in-practice svg text {
  fill: #000000 !important;
}

.c18 [data-type="note"].ethics-in-practice a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c18 [data-type="note"].ethics-in-practice .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].ethics-in-practice h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/ethics-in-practice.svg") #24739e no-repeat right;
  background-size: contain;
}

.c18 [data-type="note"].ethics-in-practice .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].ethics-in-practice .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c18 [data-type="note"].customer-satisfaction {
  width: 100%;
  -webkit-box-decoration-break: slice;
  box-decoration-break: slice;
  box-sizing: border-box;
  margin-bottom: 12px;
}

.c18 [data-type="note"].customer-satisfaction svg text {
  fill: #000000 !important;
}

.c18 [data-type="note"].customer-satisfaction a[href] {
  color: #0064A0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #0064A0 solid 0.02em;
}

.c18 [data-type="note"].customer-satisfaction .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].customer-satisfaction h3[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  margin-bottom: 0px;
  color: #FFFFFF;
  line-height: 23px;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 15.6px;
  background: #24739e;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  background: url("../themes/theme3/images/customer-satisfaction.svg") #24739e no-repeat right;
  background-size: contain;
}

.c18 [data-type="note"].customer-satisfaction .os-note-body {
  background: #D3E3EB;
  color: #000000;
  border: solid 1px #D3E3EB;
  line-height: 18px;
  padding-left: 15px;
  padding-right: 15px;
}

.c18 [data-type="note"].customer-satisfaction .os-note-body h4[data-type="title"] {
  font-weight: normal;
  font-family: "Roboto Condensed",serif;
  page-break-after: avoid;
  font-family: "Roboto Condensed",serif;
  color: #324456;
  font-size: 15px;
  line-height: 23px;
  margin-bottom: 15px;
  color: #324456;
  margin-top: 12px;
}

.c17 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 60.2rem;
  margin: 0 auto;
  padding: 0 1.6rem;
  padding-top: 1.6rem;
  padding-bottom: 0;
  overflow: visible;
}

.c17 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c17 a:hover {
  color: #0064A0;
}

.c17 * {
  overflow: initial;
}

.c21 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 60.2rem;
  margin: 0 auto;
  padding: 0 1.6rem;
  color: #027EB5;
}

.c21 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c21 a:hover {
  color: #0064A0;
}

.c21 > span {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c21 > span a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c21 > span a:hover {
  color: #0064A0;
}

.c21 > span:hover {
  color: #0064A0;
}

.c19 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  box-shadow: 0 0 0.2rem 0.2rem rgba(0,0,0,0.1);
  margin: 2rem 0 0 0;
  min-height: 6rem;
  padding: 1.8rem 0 0 0;
}

.c19 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c19 a:hover {
  color: #0064A0;
}

.c19 > .c20 {
  margin-bottom: 1.8rem;
}

.c19 li {
  margin-bottom: 1rem;
  overflow: visible;
}

.c5 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.c15 {
  top: 23rem;
  height: calc(100vh - 23rem);
  overflow-y: auto;
  padding: 1rem;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #f1f1f1;
  width: 33.5rem;
  position: -webkit-sticky;
  position: sticky;
}

.c15 ol {
  padding-inline-start: 10px;
}

.c15 > * {
  -webkit-transition: all 300ms;
  transition: all 300ms;
  visibility: visible;
  opacity: 1;
}

.c9 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c12 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c4 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c6 {
  font-family: Neue Helvetica W01;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #5E6062;
  margin: 0;
  padding: 0;
}

.c3 {
  border: none;
  padding: 0;
  margin: 0;
  overflow: visible;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4rem;
  border-bottom: solid 0.1rem #5E6062;
}

.c10 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  height: 2.5rem;
  border: none;
  outline: none;
}

.c10::-webkit-input-placeholder {
  color: #5E6062;
}

.c10::-moz-placeholder {
  color: #5E6062;
}

.c10:-ms-input-placeholder {
  color: #5E6062;
}

.c10::placeholder {
  color: #5E6062;
}

.c11 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #5E6062;
  margin: 0;
}

.c7 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
  position: relative;
  z-index: 2;
  display: block;
  background: #fff;
}

.c14 {
  overflow: visible;
  min-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0 auto;
  width: 100%;
  max-width: 117rem;
  background-color: #fff;
}

.c0 {
  overflow: visible;
  background-color: #f1f1f1;
  width: 100%;
  min-height: 100%;
}

@media (max-width:64em) {
  .c19 {
    min-height: 4rem;
    padding: 0.8rem 0 0 0;
  }

  .c19 > .c20 {
    margin-bottom: 0.8rem;
  }
}

@media (max-width:64em) {
  .c15 {
    position: -webkit-sticky;
    position: sticky;
  }
}

@media (max-width:64em) {
  .c2 {
    height: 4rem;
  }
}

@media (max-width:64em) {
  .c8 {
    border: none;
    margin-right: 1rem;
  }
}

@media (max-width:64em) {
  .c10 {
    display: none;
  }
}

@media (max-width:64em) {
  .c13 {
    display: none;
  }
}

@media (max-width:64em) {
  .c1 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          aria-label="Click to close the Table of Contents"
          className="c3"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c4 c5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <h3
            className="c6"
          >
            Table of contents
          </h3>
        </button>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <svg
              aria-hidden="true"
              className="c9 c5"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                fill="currentColor"
              />
            </svg>
            <input
              className="c10"
              placeholder="Search this book"
            />
          </div>
          <div
            className="c11"
          >
            <svg
              aria-hidden="true"
              className="c12 c5"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
                fill="currentColor"
              />
            </svg>
            <h3
              className="c13"
            >
              Print options
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c14"
    >
      <div
        className="c15"
      />
      <div
        className="c16"
        id="main-content"
        tabIndex={-1}
      >
        <div
          className="c17 c18"
        >
          <div
            data-type="chapter"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "",
                }
              }
              data-type="page"
            />
          </div>
        </div>
        <details
          className="c19"
        >
          <summary
            className="c20 c21"
          >
            <span>
              Citation/Attribution
            </span>
          </summary>
        </details>
      </div>
    </div>
  </div>,
]
`;
